--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -328,9 +328,11 @@
       <li class="active"><a [routerLink]="['/learnresult']"><i class="fa fa-file-text "></i> <span>Learning Results </span></a></li>
       <li class="active"><a routerLink="/admin"><i class="fa fa-link"></i> <span>Admins </span></a></li>
       <li class="active"><a routerLink="/Statistical"><i class="fa fa-link"></i> <span>statistical </span></a></li>
+      <li class="active"><a routerLink="/timetable"><i class="fa fa-link"></i> <span>TimeTable </span></a></li>
+      <li class="active"><a routerLink="/addtimetable"><i class="fa fa-link"></i> <span>Add Time Table </span></a></li>
       <!-- <li class="active"><a routerlink="/logout"><i class="fa fa-link" (click)="logout()"></i> <span>Logout </span></a></li> -->
 
-      <li class="treeview">
+      <!-- <li class="treeview">
         <a>
           <i class="fa fa-link"></i> <span>Time Table</span>
           <span class="pull-right-container">
@@ -341,7 +343,7 @@
           <li><a [routerLink]="['/timetable']">TimeTable</a></li>
           <li><a [routerLink]="['/addtimetable']">Add Time Table</a></li>
         </ul>
-      </li>
+      </li> -->
     </ul>
             <!-- /.sidebar-menu -->
         </section>
