--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -355,10 +355,7 @@
 
         <!-- Main content -->
         <section class="content container-fluid">
-
-            <!--------------------------
-            | Your Page Content Here |
-            -------------------------->
+            <!-- Your Page Content Here  -->
             <router-outlet></router-outlet>
         </section>
         <!-- /.content -->
